@@ -1,3 +1,6 @@
+2-5-3
+-Removed obsolete constructor from `Motor`.
+
 2-5-2
 -Created a new package for drive related commands.
 -Created a new package for net related commands.
